--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+	<style>
+		.state-borders {
+			fill: none;
+			stroke: #fff;
+			stroke-width: 0.5px;
+		}
+	</style>
 	<head>
 		<meta charset="utf-8">
 		<title>D3: Axis moved to the bottom</title>
@@ -8,7 +15,31 @@
 		</style>
 	</head>
 	<body>
-        <script type="text/javascript">
+		<div id='mapHere'></div>
+		<script src="https://d3js.org/d3.v4.min.js"></script>
+		<script src="https://d3js.org/topojson.v2.min.js"></script>
+		<script type="text/javascript">
+			var width = screen.width;
+			var height = screen.height;
+			var svg = d3.select("#mapHere").append("svg").attr("width", width).attr("height", height);
+			var path = d3.geoPath();
+
+			d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
+				if (error) throw error;
+
+				svg.append("g")
+					.attr("class", "states")
+					.attr("fill", "#5b0793")
+					.selectAll("path")
+					.data(topojson.feature(us, us.objects.states).features)
+					.enter().append("path")
+					.attr("d", path);
+
+				svg.append("path")
+					.attr("class", "state-borders")
+					.attr("d", path(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; })));
+				});
+
         </script>
     </body>
 </html>
