--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							return d.id
 						})
 						.attr("fill", function(d){
-							return "rgb("+ +popDist[d.id]/10 +  ",0," + popDist[d.id]/10 + ")"
+							return "rgb("+ +popDist[parseInt(d.id)]/10 +  ",0," + popDist[parseInt(d.id)]/10 + ")"
 						});
 
 					svg.append("path")
