--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					svg.select("g").selectAll("path")
 						.on("click", function(){
 							//change the current data here
-							d3.select(this).attr("fill", makeNewColors)
+							d3.select(this).attr("fill", makeRandomColor)
 						})
 				});
 			});
